added video test

--- a/1cc.html
+++ b/1cc.html
@@ -14,5 +14,6 @@
 	<body>
 		<script type="text/javascript" src="1cc.js"></script>
 		<script type="text/javascript" src="webgl.js"></script>
+		<script type="text/javascript" src="mp4.js"></script>
 	</body>
 </html>
