--- a/1cc.html
+++ b/1cc.html
@@ -12,8 +12,10 @@
 	</head>
 
 	<body>
+		<div id="log"></div>
+
 		<script type="text/javascript" src="1cc.js"></script>
-		<script type="text/javascript" src="webgl.js"></script>
+		<!-- <script type="text/javascript" src="webgl.js"></script> -->
 		<script type="text/javascript" src="mp4.js"></script>
 	</body>
 </html>
