--- a/1cc.html
+++ b/1cc.html
@@ -14,6 +14,23 @@
 	<body>
 		<div id="log"></div>
 
+
+
+		<!--
+		USE THIS CALL TO FIND OUR THE CHROMECAST IP ADDRESS
+
+		python -m SimpleHTTPServer 5555
+
+		SO YOU CAN DO
+
+		http://<IP>:9222
+		
+		AND USE CHROME TOOLS REMOTELY!
+
+		<img src="http://10.134.130.222:5555/404.gif"> -->
+
+
+
 		<script type="text/javascript" src="1cc.js"></script>
 		<!-- <script type="text/javascript" src="webgl.js"></script> -->
 		<script type="text/javascript" src="mp4.js"></script>
