--- a/2/browser/index.html
+++ b/2/browser/index.html
@@ -7,7 +7,8 @@
 
 		<link rel="stylesheet" type="text/css" href="index.css">
 
-		<script type="text/javascript" src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
+		<!--  <script type="text/javascript" src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script> -->
+		<script type="text/javascript" src="../../cast_sender_patched.js"></script>
 		<script type="text/javascript" src="../common.js"></script>
 		<script type="text/javascript" src="../../eventEmitter.js"></script>
 		<script type="text/javascript" src="../../cc_sender.js"></script>
