--- a/1/chromecast/index.html
+++ b/1/chromecast/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>2 CHROMECAST</title>
+		<title>1 CHROMECAST</title>
 
 		<link rel="stylesheet" type="text/css" href="index.css">
 
@@ -11,8 +11,8 @@
 	</head>
 
 	<body>
-		<video></video>
-
+		<div id="log"></div>
+		
 		<script type="text/javascript" src="../common.js"></script>
 		<script type="text/javascript" src="../../eventEmitter.js"></script>
 		<script type="text/javascript" src="../../cc_receiver.js"></script>
