--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 	</head>
 
 	<body>
+		<h1>ccxp</h1>
+
 		<ul>
-			<li><a href="1.html">1st experiment</a></li>
+			<li><a href="./1/browser/index.html">1</a></li>
+			<li><a href="./2/browser/index.html">2</a></li>
 		</ul>
 	</body>
 </html>
