--- a/2/browser/index.html
+++ b/2/browser/index.html
@@ -24,10 +24,24 @@
 		<br/>
 
 		<label for="autoplay">autoplay</label>
-		<input type="checkbox" id="autoplay" checked="">
+		<input type="checkbox" id="autoplay">
 		<br/>
 
 		<button id="load-button">load</button>
+		<br/>
+
+		<hr/>
+
+		<button id="play-button">play</button>
+		<button id="pause-button">pause</button>
+		<br/>
+
+		<input type="text" id="current-time-set" value="0">
+		<button id="current-time-set-button">current time set [0 - duration]</button>
+		<br/>
+
+		<input type="text" id="volume-set" value="1">
+		<button id="volume-set-button">volume set [0 - 1]</button>
 		<br/>
 
 		<hr/>
