--- a/2/browser/index.html
+++ b/2/browser/index.html
@@ -68,6 +68,14 @@
 
 
 
+		<hr/>
+
+
+
+		<button id="kill-cc">kill cc</button>
+
+
+
 		<script type="text/javascript" src="index.js"></script>
 	</body>
 </html>
