--- a/2/chromecast/index.html
+++ b/2/chromecast/index.html
@@ -14,15 +14,16 @@
 		<video></video>
 
 		<div id="badge">
-			<div class="title">SAPO</div>
+			<div class="title">Canal SAPO</div>
 		</div>
 
 		<div id="next">
 			<div class="left">
-				<span class="duration">tempo</span>
+					a seguir...<br/>
+					<span class="title">o discurso de obama</span>
 			</div>
 			<div class="right">
-				<span class="title">titulo</span>
+				<span class="duration">5:22</span>
 			</div>
 		</div>
 
