--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 		<h1>ccxp</h1>
 
 		<ul>
-			<li><a href="./1/browser/index.html">1</a></li>
-			<li><a href="./2/browser/index.html">2</a></li>
+			<li><a href="./1/browser/index.html">1</a> - basic message exchange</li>
+			<li><a href="./2/browser/index.html">2</a> - custom player with hud, returning events back to browser</li>
+			<li><a href="./3/browser/index.html">2</a> - using the media player library</li>
 		</ul>
 	</body>
 </html>
