badge and next GUIs working

--- a/2/browser/index.html
+++ b/2/browser/index.html
@@ -28,7 +28,6 @@
 		<br/>
 
 		<button id="load-button">load</button>
-		<br/>
 
 
 
@@ -46,7 +45,6 @@
 
 		<input type="text" id="volume-set" value="1">
 		<button id="volume-set-button">volume set [0 - 1]</button>
-		<br/>
 
 
 
@@ -64,6 +62,43 @@
 
 		<label for="dimensions">dimensions:</label>
 		<span id="dimensions"></span>
+
+
+
+		<hr/>
+
+
+
+		<label for="badge-title">badge title</label>
+		<input type="text" id="badge-title" value="canal SAPO">
+		<br/>
+
+		<label for="badge-image">badge image</label>
+		<input type="text" id="badge-image" value="../../assets/images/sapo_badge256.png">
+		<br/>
+
+		<button id="set-badge">set badge</button>
+
+
+
+		<hr/>
+
+
+
+		<label for="next-title">next title</label>
+		<input type="text" id="next-title" value="o discurso de Obama">
+		<br/>
+
+		<label for="next-duration">next duration</label>
+		<input type="text" id="next-duration" value="2:00">
+		<br/>
+
+		<label for="next-poster">next poster</label>
+		<input type="text" id="next-poster" value="http://thumbs.web.sapo.io/?pic=http://cache13.stormap.sapo.pt/vidstore11/thumbnais/f7/d5/7f/10360335_oJoCp.jpg&amp;crop=center&amp;tv=2&amp;W=444&amp;H=250&amp;errorpic=http://assets.web.sapo.io/sapovideo/sv/20150205/imgs/playlist_default_thumb_error_pt.gif">
+		<br/>
+
+		<button id="load-next">load next</button>
+		<button id="unload-next">unload next</button>
 
 
 
