--- a/2/chromecast/index.html
+++ b/2/chromecast/index.html
@@ -13,17 +13,17 @@
 	<body>
 		<video></video>
 
-		<div id="badge">
-			<div class="title">Canal SAPO</div>
+		<div id="badge" class="hidden">
+			<div class="title">title</div>
 		</div>
 
-		<div id="next">
+		<div id="next" class="hidden">
 			<div class="left">
 					a seguir...<br/>
-					<span class="title">o discurso de obama</span>
+					<span class="title">next title</span>
 			</div>
 			<div class="right">
-				<span class="duration">5:22</span>
+				<span class="duration">next time</span>
 			</div>
 		</div>
 
