--- a/2/browser/index.html
+++ b/2/browser/index.html
@@ -53,15 +53,15 @@
 
 
 		<label for="current-time">currentTime:</label>
-		<span id="current-time"></span>
+		<span id="current-time">0</span>
 		<br/>
 
 		<label for="duration">duration:</label>
-		<span id="duration"></span>
+		<span id="duration">0</span>
 		<br/>
 
 		<label for="dimensions">dimensions:</label>
-		<span id="dimensions"></span>
+		<span id="dimensions">0x0</span>
 
 
 
